Added Survey functionality
